Fix. Auto scroll on mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -841,6 +841,7 @@ summary {
   width: 100vw;
   height: 100%;
   padding: 48px 40px;
+  overflow: auto;
   background-color: white;
   z-index: 999;
   opacity: 0;
