--- a/sass/layout/header/_menu.scss
+++ b/sass/layout/header/_menu.scss
@@ -37,6 +37,7 @@
   width: 100vw;
   height: 100%;
   padding: spacing(4.8) spacing(4);
+  overflow: auto;
 
   background-color: getColor(white);
   z-index: 999;
